--- a/js/js-complete-course/00-readit-fixit-writeit/03-Write-It/01/index.html
+++ b/js/js-complete-course/00-readit-fixit-writeit/03-Write-It/01/index.html
@@ -2,13 +2,12 @@
 <html lang="nl">
 <head>
 	<meta charset="UTF-8">
-	<title>Top 10</title>
+	<title>TOP 10</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
- 	<script>
-  		document.write('<h1>Popular TV Shows</h1>');
- 	</script>;
 </head>
 <body>
+  <h1>Top 10 Greatest Movies of All Time</h1>
+	<script src="js/script.js"></script>
 </body>
 </html>
