--- a/js/js-complete-course/00-readit-fixit-writeit/03-Write-It/01/index.html
+++ b/js/js-complete-course/00-readit-fixit-writeit/03-Write-It/01/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Top 10 Greatest Movies of All Time</h1>
+  <h1>Films in Onze Zalen </h1>
 	<script src="js/script.js"></script>
 </body>
 </html>
