--- a/js/js-complete-course/01-base/02-var-prompt/index.html
+++ b/js/js-complete-course/01-base/02-var-prompt/index.html
@@ -18,12 +18,13 @@
             </header>
             <div class="content">
                 <section class="explain">
-                    <p>Ask the name of the user, and display in the  <em>dialog box</em> the following welcome message : <em>Hello, [name] !</em>.</p>
+                    <p>Ask the name of the user, and display in the  <em>dialog box</em> the following welcome message : <em0>Hello, [name]!</em>.</p>
+                    <p id="demo"></p>
                 </section>
             </div>
         </div>
 
-        <script src="./script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
 
