--- a/js/js-complete-course/01-base/03-prompt-if/index.html
+++ b/js/js-complete-course/01-base/03-prompt-if/index.html
@@ -20,6 +20,7 @@
                 <section class="explain">
                     <p>Ask the user if he wants some cake. If yes, congratulate him/her; for any other response, say:
                         <em>More cake for me then :p !</em></p>
+                    <p id="demo"></p>
                 </section>
             </div>
         </div>
